# paperback

./: .gitignore  CMakeLists.txt  Cargo.toml
.github/workflows/: build.yml
app/: app.cpp  config_manager.cpp  constants.hpp  dialogs.cpp  dialogs.hpp  document_manager.cpp  document_manager.hpp  docx_parser.cpp  fb2_parser.cpp  fb2_parser.hpp  main_window.cpp  odp_parser.cpp  odt_parser.cpp  parser.cpp  parser.hpp  pptx_parser.cpp  rust_parser.cpp  rust_parser.hpp  utils.cpp  utils.hpp
lib/: Cargo.toml  build.rs
lib/.claude/: settings.local.json
lib/src/: bridge.rs  chm_ffi.rs  config.rs  document.rs  html_to_text.rs  lib.rs  pdfium.rs  update.rs  xml_to_text.rs
lib/src/parser/: chm.rs  docx.rs  epub.rs  fb2.rs  html.rs  markdown.rs  mod.rs  odp.rs  odt.rs  pdf.rs  pptx.rs  text.rs  utils.rs
lib/src/utils/: encoding.rs  html_to_text.rs  mod.rs  text.rs  zip.rs
libpaperback/: Cargo.toml
libpaperback/src/: bridge.rs  lib.rs  update.rs
libpaperback/src/ffi/: mod.rs  strings.rs
libpaperback/src/utils/: encoding.rs  mod.rs  text.rs  zip.rs
paperback/: app.cpp  docx_parser.cpp  epub_parser.cpp  epub_parser.hpp  libpaperback.h  main_window.cpp  pptx_parser.cpp  utils.cpp  utils.hpp
po/: paperback.pot
src/: config.rs  update.rs
src/parser/: pdf.rs
src/ui/: dialogs.rs  document_manager.rs  help.rs  main_window.rs
vcpkg/: vcpkg.json
