[package]
name = "libpaperback"
version = "0.1.0"
edition = "2021"

[lib]
name = "paperback"
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
