[package]
name = "libpaperback"
version = "0.1.0"
edition = "2021"

[lib]
name = "paperback"
crate-type = ["staticlib"]

[dependencies]
encoding_rs = "0.8.35"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = { version = "6.0.0", default-features = false, features = ["deflate", "bzip2"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
